--- a/styles.css
+++ b/styles.css
@@ -943,8 +943,7 @@ lav-logo {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        gap: 1rem;
-        justify-content: end;
+        justify-content: center;
         align-items: center;
         overflow: hidden;
         margin-left: auto;
