--- a/styles.css
+++ b/styles.css
@@ -2793,6 +2793,7 @@ lav-logo {
   transition: all 0.3s ease;
   position: relative;
   font-size: 2.1rem;
+  color: var(--accent-color);
 }
 
 .word-style-list li{
